--- a/modules/core/client/scss/home.scss
+++ b/modules/core/client/scss/home.scss
@@ -1,3 +1,37 @@
+body {
+    background-color: #00b3ee;
+    color: white;
+    border-color: #d43f3a;
+}
+
+button {
+    background-color: white;
+    border: none;
+    padding: 10px;
+    font-size: 20px;
+    color: #00b3ee;
+    font-weight: bold;
+}
+
+.font-size-brand {
+    font-size: 40px;
+}
+.font-size-large {
+    font-size: 30px;
+}
+
+.font-size-medium {
+    font-size: 25px;
+}
+
+.font-size-small {
+    font-size: 18px;
+}
+
+.top-padding-20 {
+    padding-top: 20px;
+}
+
 .home-page {
     .home-branding {
         text-align: center;
@@ -25,7 +59,8 @@ input, select {
     border-right: none;
     text-align: center;
     background-color: transparent;
-    border-color: #cccccc;
+    border-color: #d43f3a;
+    color: white;
 }
 
 p {
@@ -43,14 +78,37 @@ p {
 .insuTypesList {
     li {
         padding: 10px;
-        width: 200px;
-        height: 150px;
+        margin: 10px;
+        width: 300px;
+        height: 300px;
         text-align: center;
         cursor: pointer;
+        box-shadow: 0px 0px 0px 1px #d43f3a;
 
         img {
             width: 150px;
             display: block;
+            margin: auto;
+        }
+    }
+    .selected {
+        box-shadow: 0px 0px 0px 2px white;
+    }
+}
+
+.insurance-plans {
+    list-style: none;
+
+    .insurance-plan {
+        float: left;
+        margin: 20px 20px;
+        border: 1px solid;
+        height: 350px;
+        padding: 20px;
+
+        .med-plan {
+            width: 220px;
+            display: inline-block;
         }
     }
 }
