--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -6,8 +6,8 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a data-ui-sref="home" class="navbar-brand" >
-      HDFC Insure
+    <a data-ui-sref="home" class="navbar-brand" style="color: white">
+      HDFC Life
     </a>
   </div>
 
